fix(navbar): prevent collapsed navbar scrolling

--- a/static/assets/css/user.css
+++ b/static/assets/css/user.css
@@ -1,6 +1,17 @@
 /* prettier-ignore */
 /*# sourceMappingURL=user.css.map */
 
+/* Fix collapsed navbar scrolling: theme sets position:absolute which scrolls with page */
+@media (min-width: 992px) {
+  .navbar-vertical-collapsed .navbar-vertical.navbar-expand-lg {
+    position: fixed !important;
+    top: var(--phoenix-navbar-top-height) !important;
+    height: calc(100vh - var(--phoenix-navbar-top-height)) !important;
+    min-height: unset !important;
+    padding-top: 0 !important;
+  }
+}
+
 /* Align dropdown-indicator icon with simple nav items in collapsed mode */
 .navbar-vertical-collapsed .navbar-vertical[class*="navbar-expand-"] .nav-link.dropdown-indicator.label-1 {
   padding-left: 1.5rem;
